--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <hu.bme.aut.stringartdesigner.view.DrawView
-        android:id="@+id/draw_view"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"/>
+    <fragment
+        android:id="@+id/canvas_fragment"
+        class="hu.bme.aut.stringartdesigner.fragments.CanvasFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"/>
+
+    <fragment
+        android:id="@+id/ui_fragment"
+        class="hu.bme.aut.stringartdesigner.fragments.UIFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
