added EditText for functions input

--- a/app/src/main/res/layout/fragment_u_i.xml
+++ b/app/src/main/res/layout/fragment_u_i.xml
@@ -18,5 +18,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/hint_points"/>
+    <EditText
+        android:id="@+id/edges_Function"
+        android:inputType="textFilter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/hint_edges_function"/>
+    <EditText
+        android:id="@+id/points_function"
+        android:inputType="textFilter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/hint_points_function"/>
 
 </LinearLayout>
