--- a/app/src/main/res/layout/fragment_u_i.xml
+++ b/app/src/main/res/layout/fragment_u_i.xml
@@ -6,29 +6,101 @@
     android:orientation="vertical"
     tools:context=".fragments.UIFragment">
 
-    <EditText
+    <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:orientation="horizontal">
+    <NumberPicker
         android:id="@+id/polygon_n"
         android:inputType="number"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="@string/hint_polygon_n" />
-    <EditText
+    <NumberPicker
         android:id="@+id/points"
         android:inputType="number"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="@string/hint_points"/>
-    <EditText
-        android:id="@+id/edges_Function"
-        android:inputType="textFilter"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/hint_edges_function"/>
-    <EditText
-        android:id="@+id/points_function"
-        android:inputType="textFilter"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/hint_points_function"/>
 
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+        <NumberPicker
+            android:id="@+id/edge_constant_A"
+            android:inputType="number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="@string/hint_polygon_n" />
+        <TextView
+            android:id="@+id/edge_label_edge_func"
+            android:text="Edge + "
+            android:layout_marginTop="70dp"
+            android:layout_marginStart="5dp"
+            android:textSize="12pt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <NumberPicker
+            android:id="@+id/edge_constant_B"
+            android:inputType="number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="@string/hint_points"/>
+        <TextView
+            android:id="@+id/num_label_edge_func"
+            android:text="Num + "
+            android:layout_marginTop="70dp"
+            android:layout_marginStart="5dp"
+            android:textSize="12pt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <NumberPicker
+            android:id="@+id/edge_constant_C"
+            android:inputType="textFilter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="@string/hint_edges_function"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+        <NumberPicker
+            android:id="@+id/point_constant_A"
+            android:inputType="number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="@string/hint_polygon_n" />
+        <TextView
+            android:id="@+id/edge_label_point_func"
+            android:text="Edge + "
+            android:layout_marginTop="70dp"
+            android:layout_marginStart="5dp"
+            android:textSize="12pt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <NumberPicker
+            android:id="@+id/point_constant_B"
+            android:inputType="number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="@string/hint_points"/>
+        <TextView
+            android:id="@+id/num_label_point_func"
+            android:text="Num + "
+            android:layout_marginTop="70dp"
+            android:layout_marginStart="5dp"
+            android:textSize="12pt"
+            android:textAlignment="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <NumberPicker
+            android:id="@+id/point_constant_C"
+            android:inputType="textFilter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="@string/hint_edges_function"/>
+    </LinearLayout>
 </LinearLayout>
