added sandbox mode

--- a/app/src/main/res/layout/fragment_general_settings.xml
+++ b/app/src/main/res/layout/fragment_general_settings.xml
@@ -62,6 +62,26 @@
                 android:layout_marginTop="10dp"
                 android:hint="@string/hint_points"/>
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_weight="1"
+            android:layout_marginTop="10dp">
+            <TextView
+                android:id="@+id/label_sandbox"
+                android:text="@string/sandbox_mode"
+                android:textSize="8pt"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <androidx.appcompat.widget.SwitchCompat
+                android:id="@+id/sandbox"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="60dp"
+                android:layout_marginTop="10dp"/>
+        </LinearLayout>
     </LinearLayout>
 
 
